--- a/src/templates/students/seq_discussion.html
+++ b/src/templates/students/seq_discussion.html
@@ -96,6 +96,6 @@
 
 {% block script %}
 {{ super() }}
-<meta id="content-update" data-sectionkey="{{sectionKey}}" >
+<meta id="content-update" data-assignmentkey="{{assignmentKey}}" >
 <script type="text/javascript" src="/js/students/seq_discussion_content_update.js"></script>
 {% endblock script %}
